--- a/stylesheet.css
+++ b/stylesheet.css
@@ -119,8 +119,12 @@ iframe {
     filter: grayscale(0%);
 }
 
+.review-external-wrap:nth-child(odd) {
+    clear: both;
+}
+
 .review-wrap {
-    padding: 10px;
+    padding: 15px;
 }
 
 .review-author {
@@ -129,7 +133,7 @@ iframe {
 
 .fa-quote-left {
     position: absolute;
-    top: -10px;
+    top: 0px;
     left: 10px;
     opacity: 0.3;
 }
